platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_130.platter
piece[] of nums = [1, 2, 3];
piece of num = 1;


remove([1, 2, 3], 1);
